# FM-Radio

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  fx.bat
.github/workflows/: arm-linux.yml  arm-ubuntu.yml  linux.yml  windows.yml  x86-linux.yml  x86-macos.yml  x86-ubuntu.yml  x86-windows.yml
src/: CMakeLists.txt  app.cpp  app.h  fm_demod.cpp  fm_demod_benchmark.cpp  fm_demod_no_tuner.cpp  fm_demod_scraper.cpp  fm_demod_tuner.cpp  fm_scraper.cpp  fm_scraper.h  main.cpp  rds_decode.cpp  render_app.cpp  rtl_sdr.cpp
src/audio/: CMakeLists.txt  audio_mixer.cpp  audio_mixer.h  frame.h  portaudio_output.h  resampled_pcm_player.cpp  resampled_pcm_player.h
src/demod/: bpsk_synchroniser.cpp  bpsk_synchroniser.h  broadcast_fm_demod.cpp  broadcast_fm_demod.h  fm_demod.h  pll_mixer.h  ted_clock.h  trigger_cooldown.h  zero_crossing_detector.cpp  zero_crossing_detector.h
src/device/: CMakeLists.txt  device.cpp  device.h
src/dsp/: CMakeLists.txt  agc.h  calculate_fft.cpp  calculate_fft.h  calculate_fft_mag.cpp  calculate_fft_mag.h  clamp.h  delay_line.h  fftshift.h  filter_designer.cpp  filter_designer.h  filters.h  fir_filter.h  hilbert_fft_transform.h  hilbert_fir_filter.cpp  hilbert_fir_filter.h  iir_filter.h  integrator.h  polyphase_filter.h  window_functions.h
src/dsp/simd/: apply_harmonic_pll.cpp  apply_harmonic_pll.h  avx_mathfun.h  c32_cum_sum.h  c32_f32_cum_mul.cpp  c32_f32_cum_mul.h  c32_mul.h  chebyshev_sine.h  data_packing.h  dsp_config.h  f32_cum_mul.cpp  f32_cum_mul.h  f32_cum_sum.h  simd_config.h  sse_mathfun.h
src/dsp/simd/scalar/: apply_harmonic_pll.h  c32_f32_cum_mul.h  f32_cum_mul.h
src/dsp/simd/x86/: apply_harmonic_pll.h  c32_cum_sum.h  c32_f32_cum_mul.h  c32_mul.h  data_packing.h  f32_cum_mul.h  f32_cum_sum.h
src/fm_demod/: CMakeLists.txt  bpsk_synchroniser.cpp  bpsk_synchroniser.h  broadcast_fm_demod.cpp  broadcast_fm_demod.h  fm_demod.cpp  local_oscillator.cpp  local_oscillator.h  pll_mixer.cpp  pll_mixer.h  ted_clock.cpp  ted_clock.h  trigger_cooldown.cpp
src/gui/: CMakeLists.txt  render_app.cpp  render_app.h  render_bpsk_sync.cpp  render_bpsk_sync.h  render_device_selector.cpp  render_device_selector.h  render_fm_demod.cpp  render_fm_demod.h  render_rds_database.cpp  render_rds_database.h  render_util.h
src/rds_decoder/: CMakeLists.txt  crc10.cpp  crc10.h  differential_manchester_decoder.h  logging_buffer.h  rds_constants.h  rds_database.h  rds_database_decoder_handler.cpp  rds_database_decoder_handler.h  rds_decoder.cpp  rds_decoder.h  rds_decoder_handler.h  rds_decoding_chain.h  rds_group_sync.cpp  rds_group_sync.h  rds_programme_type_names.h
src/utility/: aligned_allocator.hpp  aligned_vector.h  joint_allocate.h
toolchains/arm/: install_packages.sh
toolchains/macos/: README.md
toolchains/ubuntu/: README.md
toolchains/windows/: README.md  create_package.sh
